# t-hub

./: .gitignore  .mcp.json  AGENTS.md  ARCHIVE.md  BRIEF.md  Cargo.toml  PRD.md  README.md  REPORT.md  REVIEW.md  SUMMARY.md  index.html  node_modules  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml  test.yml
app/: layout.tsx  page.tsx
apps/cli/: Cargo.toml  README.md
apps/cli/src/: admin.rs  agents.rs  args.rs  control.rs  history.rs  main.rs  powder.rs  projects.rs  render.rs  worktree.rs
apps/cli/tests/: admin_contract.rs  agents_contract.rs  history_contract.rs  powder_contract.rs  projects_contract.rs  worktree_safety_contract.rs
apps/desktop/: index.html  package.json  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  provider-capacity.json  tauri.conf.json  tauri.dev.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/crates/t-hub-agent/: Cargo.toml
apps/desktop/src-tauri/crates/t-hub-agent/src/: codex.rs  dispatch.rs  gate.rs  hook.rs  host.rs  journal.rs  main.rs  registry.rs  transport.rs
apps/desktop/src-tauri/crates/t-hub-agent/tests/: codex_tap_e2e.rs  codex_unobserved_e2e.rs
apps/desktop/src-tauri/crates/t-hub-agent/tests/fixtures/: README.md  codex-0.142.5-clean-turn.jsonl  codex-0.142.5-resumed-turn.jsonl  codex-0.142.5-turn-failed-minimal.jsonl  codex-0.142.5-turn-failed.jsonl  codex-0.144.4-app-server-permission-lifecycle.jsonl  codex-0.144.4-app-server-thread-started.jsonl
apps/desktop/src-tauri/crates/t-hub-mcp/: Cargo.toml
apps/desktop/src-tauri/crates/t-hub-mcp/src/: control_client.rs  lib.rs  main.rs  server.rs  tools.rs
apps/desktop/src-tauri/crates/t-hub-protocol/: Cargo.toml
apps/desktop/src-tauri/crates/t-hub-protocol/src/: lib.rs
apps/desktop/src-tauri/crates/termhub-agent/: Cargo.toml
apps/desktop/src-tauri/crates/termhub-agent/src/: hook.rs  host.rs  journal.rs  main.rs  transport.rs
apps/desktop/src-tauri/crates/termhub-mcp/src/: control_client.rs  tools.rs
apps/desktop/src-tauri/crates/termhub-protocol/: Cargo.toml
apps/desktop/src-tauri/examples/: control_probe_server.rs
apps/desktop/src-tauri/fixtures/: native-control-error-bridge.json
apps/desktop/src-tauri/src/: acl.rs  agent_session.rs  audit.rs  authz.rs  bounded_exec.rs  codex.rs  commands.rs  commands_05.rs  control.rs  control_client.rs  cortana_reconcile.rs  db.rs  delegated_admin.rs  devserver.rs  diag.rs  dropin.rs  engine_supervisor.rs  files.rs  fleet.rs  git.rs  governor.rs  hangwatch.rs  history.rs  identity.rs  inbox.rs  lib.rs  main.rs  model.rs  plane.rs  powder.rs  pty.rs  recent.rs  remote_pty.rs  scribe.rs  secret_seal.rs  supervision.rs  theme.rs  tmux.rs  tray.rs  usage.rs  (+2 more)
apps/desktop/src-tauri/src/agent/: connection.rs  emit.rs  mod.rs
apps/desktop/src-tauri/src/claude/: hooks.rs  install.rs  mod.rs  status.rs
apps/desktop/src-tauri/src/fixtures/: captains-schema-13.json  captains-schema-17.json  captains-schema-18.json  captains-schema-25-packaged-legacy-orphan.json  captains-schema-25-packaged-observed-launch.json
apps/desktop/src-tauri/src/harness/: claude.rs  codex.rs  mod.rs
apps/desktop/src-tauri/src/history/: catalog.rs
apps/desktop/src-tauri/tests/: mcp_e2e.rs
apps/desktop/src-tauri/tests/fixtures/: explicit-none-dispatch-preflight-response.json
apps/native/: Cargo.toml
apps/native/examples/: chime_demo.rs
apps/native/src/: app.rs  lib.rs  main.rs  render_support.rs
apps/native/src/apply/: mod.rs
apps/native/src/chrome/: actions.rs  keymap.rs  mod.rs  model.rs  palette.rs  palette_view.rs  persist.rs  view.rs  windows.rs
apps/native/src/font/: mod.rs
apps/native/src/overlays/: feed.rs  mod.rs  recents.rs  toasts.rs
apps/native/src/panels/: files.rs  mod.rs  probe.rs  runner.rs  view.rs
apps/native/src/render/: mod.rs
apps/native/src/term/: mod.rs  scan.rs
apps/native/src/wire/: mod.rs
apps/site/: SUMMARY.md  package-lock.json  package.json  tailwind.config.ts
components/: Footer.tsx  Navbar.tsx
components/sections/: CTA.tsx  Features.tsx  Hero.tsx  HowItWorks.tsx  Showcase.tsx  Stack.tsx  Why.tsx
components/ui/: Marquee.tsx  Reveal.tsx  Screenshot.tsx  (+1 more)
docs/: AGENT-RELATIONSHIP-AND-MESSAGING-CONTRACT.md  AGENT-SESSION-SMOKE-0.3.106.md  APPTURNITY-PROJECT-LINK-CORTANA-RUNBOOK.md  AUDIT.md  BACKBURNER.md  BACKLOG.md  CAPTAIN-ACTIVE-ASSIGNMENT.md  CAPTAIN-AUTONOMY-AND-SCOPED-GRANTS-PLAN.md  CAPTAIN-CHAT-PHASES.md  CAPTAIN-POWDER-HANDOFF.md  CAPTAIN-SIDEBAR-PRD.md  CODEX-HARNESS.md  CODEX-PERMISSION-OBSERVABILITY-REVIEW.md  CODEX-SESSION-WORKFLOW-REVIEW-2026-07-20.md  DEPOWDER-MIGRATION-IMPLEMENTATION-REPORT.md  DEPOWDER-MIGRATION-PLAN.md  DEV-BUILD.md  DRAG-LAG-INVESTIGATION.md  FEATURE-PLAN.md  HANDOFF.md  HERDR-PARITY.md  HISTORY-CONTRACT.md  LOCAL-POWDER-CAPTAIN-EXECUTION-PLAN.md  MCP.md  NATIVE-FINISH-PLAN.md  NATIVE-PIVOT-EXECUTION.md  NATIVE-RENDER-PIVOT.md  ORCHESTRATOR-OPERATING-MODEL.md  ORCHESTRATOR-WAKE-DESIGN.md  PACKAGE-1-WINDOWS-E2E-REQUIREMENTS.md  PERF-AND-DRAG-WORKLOG.md  PERF-AUDIT.md  PERF-MAIN-UNCONFIRMED-PATCH.md  PERF-OPTIMIZATION-REVIEW.md  PERFORMANCE-BENCHMARK.md  PHASED-PRODUCTION-PLAN.md  PLAN.md  POST-POWDER-ROADMAP.md  POWDER-INTEGRATION.md  PRODUCTION-READINESS.md  (+22 more)
lib/: site.ts
src/: App.tsx  app.rs  index.css  lib.rs  main.tsx  render_support.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/termhub-agent/src/: dispatch.rs  hook.rs  host.rs  journal.rs  main.rs  registry.rs  transport.rs
src-tauri/crates/termhub-mcp/: Cargo.toml
src-tauri/crates/termhub-mcp/src/: main.rs  protocol.rs  server.rs  tools.rs
src-tauri/crates/termhub-protocol/src/: lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  commands_05.rs  control.rs  db.rs  diag.rs  events.rs  files.rs  lib.rs  main.rs  model.rs  pty.rs  supervision.rs  theme.rs  tmux.rs  win_snap.rs
src-tauri/src/agent/: connection.rs  emit.rs  mod.rs
src-tauri/src/claude/: hooks.rs  install.rs  mod.rs
(+331 files in other folders)
