[package]
name = "termhub"
version = "0.1.0"
description = "TermHub — terminal-first command center for Claude Code sessions in WSL2"
authors = ["Nathan Watkins"]
edition = "2021"
rust-version = "1.77"

# The Tauri desktop entrypoint lives in `src/main.rs`, which calls into this lib.
# The lib crate-type set keeps the door open for Tauri's mobile targets later.
[lib]
name = "termhub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
anyhow = "1"
parking_lot = "0.12"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
