# --- Cargo workspace (0.5) ---------------------------------------------------
# The Tauri app stays the root package so `cargo check --manifest-path
# src-tauri/Cargo.toml` keeps working unchanged. The 0.5 event-spine adds two
# members: the shared NDJSON protocol crate (the agent⇄core contract) and the
# WSL-side `termhub-agent` binary. Shared dep versions are pinned in
# `[workspace.dependencies]` so the agent and core never drift.
[workspace]
members = [
    "crates/termhub-protocol",
    "crates/termhub-agent",
    # The local MCP server binary: speaks MCP JSON-RPC on stdio and forwards
    # tools/call to the running app over the loopback control channel (PRD §9.6).
    "crates/termhub-mcp",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[package]
name = "termhub"
version = "0.1.16"
description = "TermHub — terminal-first command center for Claude Code sessions in WSL2"
authors = ["Nathan Watkins"]
edition = "2021"
rust-version = "1.77"

# The Tauri desktop entrypoint lives in `src/main.rs`, which calls into this lib.
# The lib crate-type set keeps the door open for Tauri's mobile targets later.
[lib]
name = "termhub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `devtools` keeps the WebView2 devtools (F12) available in the RELEASE build so
# the user can open the console on their machine (feat/diag).
tauri = { version = "2", features = ["tray-icon", "image-png", "devtools"] }
# Opens URLs/paths in the OS default app (the web-preview "Open externally"
# button + external links). The JS @tauri-apps/plugin-shell needs this Rust side
# registered + the `shell:allow-open` capability or its open() is a no-op.
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
portable-pty = "0.8"
anyhow = { workspace = true }
parking_lot = "0.12"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
# Filesystem walking with .gitignore semantics for the file index (files.rs).
ignore = "0.4"
# Durable SQLite persistence for the workspace layout (db.rs). `bundled` compiles
# SQLite in, so no system libsqlite3 is needed inside WSL or on a clean CI box.
rusqlite = { version = "0.32", features = ["bundled"] }
# The shared agent⇄core NDJSON contract (workspace member).
termhub-protocol = { path = "crates/termhub-protocol" }

# Windows-only: direct Win32 access to subclass the frameless main window and
# answer WM_NCHITTEST, restoring Windows 11 Snap Layouts (the hover-the-maximize
# flyout) + native edge-resize (src/win_snap.rs). Pinned to 0.61 to unify with
# the version Tauri already resolves, so the `HWND` returned by `WebviewWindow::
# hwnd()` is the same type we pass to SetWindowSubclass. Only the features this
# module uses are enabled; on non-Windows targets this dependency is absent.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi",
    # DWM custom-frame APIs: DwmExtendFrameIntoClientArea + DwmDefWindowProc.
    # Extending a 1px frame re-establishes the DWM caption surface the Snap
    # Layouts flyout anchors to (tao collapses the non-client area to zero), and
    # DwmDefWindowProc drives the maximize-button hover that triggers the flyout.
    "Win32_Graphics_Dwm",
    # MARGINS struct passed to DwmExtendFrameIntoClientArea.
    "Win32_UI_Controls",
] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
