# --- Cargo workspace (0.5) ---------------------------------------------------
# The Tauri app stays the root package so `cargo check --manifest-path
# src-tauri/Cargo.toml` keeps working unchanged. The 0.5 event-spine adds two
# members: the shared NDJSON protocol crate (the agent⇄core contract) and the
# WSL-side `t-hub-agent` binary. Shared dep versions are pinned in
# `[workspace.dependencies]` so the agent and core never drift.
[workspace]
members = [
    "crates/t-hub-protocol",
    "crates/t-hub-agent",
    # The local MCP server binary: speaks MCP JSON-RPC on stdio and forwards
    # tools/call to the running app over the loopback control channel (PRD §9.6).
    "crates/t-hub-mcp",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[package]
name = "t-hub"
version = "0.1.56"
description = "T-Hub — terminal-first command center for Claude Code sessions in WSL2"
authors = ["Nathan Watkins"]
edition = "2021"
rust-version = "1.77"

# The Tauri desktop entrypoint lives in `src/main.rs`, which calls into this lib.
# The lib crate-type set keeps the door open for Tauri's mobile targets later.
[lib]
name = "t_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Default: production. No extra features — the prod build is byte-for-byte
# unchanged.
default = []
# The side-by-side **DEV** variant ("T-Hub Dev"). Enabling it does NOT change any
# behavior except routing the app's runtime state to an isolated namespace at
# startup (see `apply_devbuild_isolation` in lib.rs): a separate tmux socket
# (`t-hub-dev`) and a separate state dir (`~/.t-hub-dev`) for the MCP control
# channel + diag log, so a dev build never touches a production T-Hub running at
# the same time. Pair with the `tauri.dev.conf.json` overlay (productName
# "T-Hub Dev" + the distinct bundle id `com.t-hub.dev`) so it installs
# ALONGSIDE production. Build: `pnpm tauri build -f devbuild --config src-tauri/tauri.dev.conf.json`.
devbuild = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `devtools` keeps the WebView2 devtools (F12) available in the RELEASE build so
# the user can open the console on their machine (feat/diag).
tauri = { version = "2", features = ["tray-icon", "image-png", "devtools"] }
# Opens URLs/paths in the OS default app (the web-preview "Open externally"
# button + external links). The JS @tauri-apps/plugin-shell needs this Rust side
# registered + the `shell:allow-open` capability or its open() is a no-op.
tauri-plugin-shell = "2"
# Reliable clipboard read/write for terminal copy/paste (navigator.clipboard is
# blocked/unreliable in WebView2). Used by Terminal.tsx Ctrl+C/V + the right-click
# menu; needs the `clipboard-manager:allow-read-text/-write-text` capabilities.
tauri-plugin-clipboard-manager = "2"
# --- Auto-updater (feat/auto-updater) --------------------------------------
# The official Tauri updater: checks the `latest.json` endpoint (a GitHub
# Releases asset), downloads + verifies the signed NSIS artifact, and installs
# it. `process` provides relaunch() so the app can restart itself after an
# install. Both are cross-platform crates (they compile on Linux/CI; the actual
# install path is Windows here). Paired with the `updater:default` /
# `process:default` capabilities and the `plugins.updater` block in
# tauri.conf.json. Versions match the sibling "scribe" app.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { workspace = true }
serde_json = { workspace = true }
portable-pty = "0.8"
anyhow = { workspace = true }
parking_lot = "0.12"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
# PNG-encode a pasted clipboard image to a temp file (dropin.rs / Lane C). Only
# the png codec is enabled to keep the build lean; `image` is already in the tree
# transitively, so this just turns on the encoder we need.
image = { version = "0.25", default-features = false, features = ["png"] }
# Filesystem walking with .gitignore semantics for the file index (files.rs).
ignore = "0.4"
# Durable SQLite persistence for the workspace layout (db.rs). `bundled` compiles
# SQLite in, so no system libsqlite3 is needed inside WSL or on a clean CI box.
rusqlite = { version = "0.32", features = ["bundled"] }
# The shared agent⇄core NDJSON contract (workspace member).
t-hub-protocol = { path = "crates/t-hub-protocol" }

# Windows-only: direct Win32 access to subclass the frameless main window and
# answer WM_NCHITTEST, restoring Windows 11 Snap Layouts (the hover-the-maximize
# flyout) + native edge-resize (src/win_snap.rs). Pinned to 0.61 to unify with
# the version Tauri already resolves, so the `HWND` returned by `WebviewWindow::
# hwnd()` is the same type we pass to SetWindowSubclass. Only the features this
# module uses are enabled; on non-Windows targets this dependency is absent.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi",
    # DWM custom-frame APIs: DwmExtendFrameIntoClientArea + DwmDefWindowProc.
    # Extending a 1px frame re-establishes the DWM caption surface the Snap
    # Layouts flyout anchors to (tao collapses the non-client area to zero), and
    # DwmDefWindowProc drives the maximize-button hover that triggers the flyout.
    "Win32_Graphics_Dwm",
    # MARGINS struct passed to DwmExtendFrameIntoClientArea.
    "Win32_UI_Controls",
] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
