# --- Cargo workspace (0.5) ---------------------------------------------------
# The Tauri app stays the root package so `cargo check --manifest-path
# src-tauri/Cargo.toml` keeps working unchanged. The 0.5 event-spine adds two
# members: the shared NDJSON protocol crate (the agent⇄core contract) and the
# WSL-side `t-hub-agent` binary. Shared dep versions are pinned in
# `[workspace.dependencies]` so the agent and core never drift.
[workspace]
members = [
    "crates/t-hub-protocol",
    "crates/t-hub-agent",
    # The local MCP server binary: speaks MCP JSON-RPC on stdio and forwards
    # tools/call to the running app over the loopback control channel (PRD §9.6).
    "crates/t-hub-mcp",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[package]
name = "t-hub"
version = "0.3.106"
description = "T-Hub — terminal-first command center for Claude Code sessions in WSL2"
authors = ["Nathan Watkins"]
edition = "2021"
rust-version = "1.89"

# The Tauri desktop entrypoint lives in `src/main.rs`, which calls into this lib.
# The lib crate-type set keeps the door open for Tauri's mobile targets later.
[lib]
name = "t_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Default: production. No extra features — the prod build is byte-for-byte
# unchanged.
default = []
# The side-by-side **DEV** variant ("T-Hub Dev"). Enabling it does NOT change any
# behavior except routing the app's runtime state to an isolated namespace at
# startup (see `apply_devbuild_isolation` in lib.rs): a separate tmux socket
# (`t-hub-dev`) and a separate state dir (`~/.t-hub-dev`) for the MCP control
# channel + diag log, so a dev build never touches a production T-Hub running at
# the same time. Pair with the `tauri.dev.conf.json` overlay (productName
# "T-Hub Dev" + the distinct bundle id `com.t-hub.dev`) so it installs
# ALONGSIDE production. Build: `pnpm tauri build -f devbuild --config src-tauri/tauri.dev.conf.json`.
devbuild = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `devtools` keeps the WebView2 devtools (F12) available in the RELEASE build so
# the user can open the console on their machine (feat/diag).
tauri = { version = "2", features = ["tray-icon", "image-png", "devtools"] }
# Opens URLs/paths in the OS default app (the web-preview "Open externally"
# button + external links). The JS @tauri-apps/plugin-shell needs this Rust side
# registered + the `shell:allow-open` capability or its open() is a no-op.
tauri-plugin-shell = "2"
# Reliable clipboard read/write for terminal copy/paste (navigator.clipboard is
# blocked/unreliable in WebView2). Used by Terminal.tsx Ctrl+C/V + the right-click
# menu; needs the `clipboard-manager:allow-read-text/-write-text` capabilities.
tauri-plugin-clipboard-manager = "2"
# --- Auto-updater (feat/auto-updater) --------------------------------------
# The official Tauri updater: checks the `latest.json` endpoint (a GitHub
# Releases asset), downloads + verifies the signed NSIS artifact, and installs
# it. `process` provides relaunch() so the app can restart itself after an
# install. Both are cross-platform crates (they compile on Linux/CI; the actual
# install path is Windows here). Paired with the `updater:default` /
# `process:default` capabilities and the `plugins.updater` block in
# tauri.conf.json. Versions match the sibling "scribe" app.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# OS toast notifications for key session events (WS-2). The JS
# @tauri-apps/plugin-notification calls this Rust side; it's gated by the
# `notification:*` capabilities and the `plugins.notification` block in
# tauri.conf.json. Without it the frontend degrades to sound-only (see
# src/lib/notify.ts).
tauri-plugin-notification = "2"
# Native Windows folder selection for the Captain codebase picker. The selected
# host path is validated and converted back to a WSL POSIX path before use.
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
portable-pty = "0.8"
anyhow = { workspace = true }
parking_lot = "0.12"
async-lock = "3"
base64 = "0.22"
# SHA-256 for the control-socket audit log's tamper-evident hash chain
# (audit.rs, socket-gate Phase 1). Already in the tree transitively; this only
# makes it a direct dependency (no lockfile resolution change).
sha2 = "0.10"
# Standard HMAC construction for non-persisted protected endpoint identities.
hmac = "0.12"
# RFC3339 timestamps for the control-socket audit log (audit.rs). Already in the
# tree transitively; this only makes it a direct dependency.
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
# Plain-HTTP client for the LOOPBACK Piper TTS proxy (voice.rs). Deliberately
# no default features (no TLS): the server is 127.0.0.1-only, and going through
# the backend (which sends no Origin header) is the whole point - the TTS
# server rejects browser-origin requests.
ureq = { version = "2", default-features = false, features = ["json", "tls"] }
uuid = { version = "1", features = ["v4"] }
# Backend-owned static Preview targets serve through capability-relative file
# handles so a writable project cannot race path validation with a symlink or
# reparse-point swap. The frontend selects only the typed root target and never
# supplies a command, executable, port, or alternate serving directory.
cap-std = "4.0.2"
cap-fs-ext = "4.0.2"
mime_guess = "2"
percent-encoding = "2"
# OS cache-dir resolution for the Scribe voice-gate status file (scribe.rs):
# LOCALAPPDATA on Windows, ~/.cache on Linux, ~/Library/Caches on macOS - so the
# reader points at Scribe's Tauri app_cache_dir on whatever OS T-Hub runs on.
# Already in the tree transitively; this makes it a direct dependency.
dirs = "6"
# PNG-encode a pasted clipboard image to a temp file (dropin.rs / Lane C). Only
# the png codec is enabled to keep the build lean; `image` is already in the tree
# transitively, so this just turns on the encoder we need.
image = { version = "0.25", default-features = false, features = ["png"] }
# Filesystem walking with .gitignore semantics for the file index (files.rs).
ignore = "0.4"
# TCP keepalive on accepted control connections (s27 attach churn-proofing):
# std::net::TcpStream exposes no keepalive setter, and a peer that vanishes
# without FIN/RST would otherwise park a control/attach handler forever.
# Already in the tree transitively; this only makes it a direct dependency.
socket2 = "0.6"
# Durable SQLite persistence for the workspace layout (db.rs). `bundled` compiles
# SQLite in, so no system libsqlite3 is needed inside WSL or on a clean CI box.
rusqlite = { version = "0.32", features = ["bundled"] }
# The shared agent⇄core NDJSON contract (workspace member).
t-hub-protocol = { path = "crates/t-hub-protocol" }

# Windows-only: direct Win32 access to subclass the frameless main window and
# answer WM_NCHITTEST, restoring Windows 11 Snap Layouts (the hover-the-maximize
# flyout) + native edge-resize (src/win_snap.rs). Pinned to 0.61 to unify with
# the version Tauri already resolves, so the `HWND` returned by `WebviewWindow::
# hwnd()` is the same type we pass to SetWindowSubclass. Only the features this
# module uses are enabled; on non-Windows targets this dependency is absent.
[target.'cfg(windows)'.dependencies]
tauri-plugin-single-instance = "2"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    # MoveFileExW with replace + write-through semantics for atomic diagnostic
    # log rotation when a previous `.1` backup already exists.
    "Win32_Storage_FileSystem",
    # OpenProcess/CloseHandle for the Scribe voice-gate pid-liveness check
    # (scribe.rs): T-Hub-on-Windows confirms Scribe's pid is alive so a long
    # continuous dictation holds regardless of the status file's mtime.
    "Win32_System_Threading",
    # CreateJobObjectW/AssignProcessToJobObject/SetInformationJobObject +
    # JOBOBJECT_EXTENDED_LIMIT_INFORMATION for engine_supervisor's
    # KILL_ON_JOB_CLOSE job that ties the managed Kokoro child's lifetime to the
    # app process (assign_kill_on_close_job, PR #54). cfg(windows)-gated, so the
    # Linux dev build cannot surface the missing feature - the Windows build does.
    # Win32_Security is required too: CreateJobObjectW's signature takes a
    # *SECURITY_ATTRIBUTES, so the fn is gated behind that feature as well.
    "Win32_System_JobObjects",
    "Win32_Security",
    # DPAPI (CryptProtectData/CryptUnprotectData) for item-3 Pillar B: at-rest
    # sealing of the server-key / server-read-key / per-session identity secrets
    # under the Windows user's data-protection key (src/secret_seal.rs).
    "Win32_Security_Cryptography",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi",
    # DWM custom-frame APIs: DwmExtendFrameIntoClientArea + DwmDefWindowProc.
    # Extending a 1px frame re-establishes the DWM caption surface the Snap
    # Layouts flyout anchors to (tao collapses the non-client area to zero), and
    # DwmDefWindowProc drives the maximize-button hover that triggers the flyout.
    "Win32_Graphics_Dwm",
    # MARGINS struct passed to DwmExtendFrameIntoClientArea.
    "Win32_UI_Controls",
] }

# Test-only: the MCP tool catalog, so control.rs's tier-parity test can assert that
# every MCP tool's declared Tier matches the server-side `required_tier` enforcement
# (item-3 ledger #16). The shipped app binary does not link this.
[dev-dependencies]
t-hub-mcp = { path = "crates/t-hub-mcp" }
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
