[package]
name = "t-hub-agent"
version = "0.5.1"
description = "T-Hub WSL-side control agent: NDJSON-over-stdio bridge, append-only event journal, tmux/git/metrics RPCs."
edition = "2021"
rust-version = "1.89"

# A single binary launched by the core as `wsl.exe -d <distro> -- t-hub-agent
# --stdio` (or directly on a unix dev box).
[[bin]]
name = "t-hub-agent"
path = "src/main.rs"

[dependencies]
t-hub-protocol = { path = "../t-hub-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
base64 = "0.22"
